# hexgen

./: Cargo.toml  README.md
hexgen-common/: Cargo.toml
hexgen-common/src/: game_object.rs  lib.rs  material.rs  matrix.rs  mesh.rs  model.rs  normal.rs  shader.rs  texture.rs  transform.rs  vector3.rs  vertex.rs
hexgen-common/src/material/: shader.rs
hexgen-common/src/model/: mesh.rs
hexgen-common/src/model/mesh/: normal.rs  vertex.rs
hexgen-core/: Cargo.toml
hexgen-core/src/: game_loop.rs
hexgen-generator/: Cargo.toml
hexgen-generator/src/: lib.rs  main.rs  ui.rs
hexgen-renderer/: Cargo.toml
hexgen-renderer/src/: camera.rs  directional_light.rs  lib.rs  main.rs  renderer.rs
hexgen-renderer/src/camera/: perspective.rs
res/shaders/: diffuse.frag  diffuse.vert
