[package]
name = "hexgen-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium="0.33.0"
winit="0.28.7"
image= { version = "0.24", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.0"